[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/spine/mainmenu/start screen_spine.png" type="Texture" id=1]
[ext_resource path="res://game/pre-run/CharacterButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/images/reagents/unknown_reagent.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/font-data/font-style.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/themes/general_theme/general_theme.tres" type="Theme" id=5]
[ext_resource path="res://game/pre-run/DifficultyButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/fonts/font-data/font-read.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://game/pre-run/PreRunScreen.gd" type="Script" id=8]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.556863 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 20
shadow_size = 10

[sub_resource type="DynamicFont" id=6]
size = 72
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="ButtonGroup" id=4]

[sub_resource type="DynamicFont" id=9]
size = 69
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="ButtonGroup" id=7]

[sub_resource type="DynamicFont" id=8]
size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 7 )

[node name="PreRunScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 2, 948, 1920, 1080 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -390.0
margin_bottom = 244.0
custom_constants/separation = 32
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeroContainer" type="PanelContainer" parent="HBoxContainer"]
margin_left = 58.0
margin_right = 1138.0
margin_bottom = 691.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/HeroContainer"]
margin_right = 1080.0
margin_bottom = 691.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/HeroContainer/MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 1030.0
margin_bottom = 641.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="HBoxContainer/HeroContainer/MarginContainer/VBoxContainer"]
margin_right = 980.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 6 )
text = "CHOOSE_HERO"
align = 1
valign = 1

[node name="Spacer" type="Control" parent="HBoxContainer/HeroContainer/MarginContainer/VBoxContainer"]
margin_top = 128.0
margin_right = 980.0
margin_bottom = 148.0
rect_min_size = Vector2( 0, 20 )

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/HeroContainer/MarginContainer/VBoxContainer"]
margin_top = 168.0
margin_right = 980.0
margin_bottom = 468.0
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" parent="HBoxContainer/HeroContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
pressed = true
group = SubResource( 4 )

[node name="Button2" parent="HBoxContainer/HeroContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 340.0
margin_right = 640.0
disabled = true
group = SubResource( 4 )
icon = ExtResource( 3 )
align = 1
expand_icon = true

[node name="Button3" parent="HBoxContainer/HeroContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 680.0
margin_right = 980.0
disabled = true
group = SubResource( 4 )
icon = ExtResource( 3 )
align = 1
expand_icon = true

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/HeroContainer/MarginContainer/VBoxContainer"]
margin_top = 488.0
margin_right = 980.0
margin_bottom = 539.0
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer/HeroContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 300.0
margin_bottom = 51.0
size_flags_horizontal = 3
text = "ALCHEMIST"
align = 1

[node name="Label2" type="Label" parent="HBoxContainer/HeroContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 340.0
margin_right = 640.0
margin_bottom = 51.0
size_flags_horizontal = 3
text = "???_CHAR"
align = 1

[node name="Label3" type="Label" parent="HBoxContainer/HeroContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 680.0
margin_right = 980.0
margin_bottom = 51.0
size_flags_horizontal = 3
text = "???_CHAR"
align = 1

[node name="DifficultyContainer" type="PanelContainer" parent="HBoxContainer"]
margin_left = 1170.0
margin_right = 1862.0
margin_bottom = 691.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/DifficultyContainer"]
margin_right = 692.0
margin_bottom = 691.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/DifficultyContainer/MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 642.0
margin_bottom = 641.0
custom_constants/separation = 9

[node name="Label" type="Label" parent="HBoxContainer/DifficultyContainer/MarginContainer/VBoxContainer"]
margin_right = 592.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 9 )
text = "CHOOSE_DIFFICULTY"
align = 1
valign = 1

[node name="Spacer" type="Control" parent="HBoxContainer/DifficultyContainer/MarginContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 592.0
margin_bottom = 162.0
rect_min_size = Vector2( 0, 50 )

[node name="EasyContainer" type="VBoxContainer" parent="HBoxContainer/DifficultyContainer/MarginContainer/VBoxContainer"]
margin_top = 171.0
margin_right = 592.0
margin_bottom = 291.0
rect_min_size = Vector2( 0, 120 )

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/DifficultyContainer/MarginContainer/VBoxContainer/EasyContainer"]
margin_right = 592.0
margin_bottom = 86.0
custom_constants/separation = 20

[node name="DifficultyButton" parent="HBoxContainer/DifficultyContainer/MarginContainer/VBoxContainer/EasyContainer/HBoxContainer" instance=ExtResource( 6 )]
margin_top = 10.0
margin_right = 66.0
margin_bottom = 76.0
size_flags_horizontal = 4
size_flags_vertical = 4
pressed = true
group = SubResource( 7 )
difficulty_color = Color( 0.172549, 1, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/DifficultyContainer/MarginContainer/VBoxContainer/EasyContainer/HBoxContainer"]
margin_left = 86.0
margin_right = 566.0
margin_bottom = 86.0

[node name="Title" type="Label" parent="HBoxContainer/DifficultyContainer/MarginContainer/VBoxContainer/EasyContainer/HBoxContainer/VBoxContainer"]
margin_right = 480.0
margin_bottom = 51.0
text = "DIF_EASY"

[node name="Description" type="Label" parent="HBoxContainer/DifficultyContainer/MarginContainer/VBoxContainer/EasyContainer/HBoxContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 480.0
margin_bottom = 86.0
rect_min_size = Vector2( 480, 0 )
custom_fonts/font = SubResource( 8 )
text = "DIF_EASY_DESC"
autowrap = true

[node name="Spacer2" type="Control" parent="HBoxContainer/DifficultyContainer/MarginContainer/VBoxContainer"]
margin_top = 300.0
margin_right = 592.0
margin_bottom = 312.0
rect_min_size = Vector2( 0, 12 )

[node name="MediumContainer" type="VBoxContainer" parent="HBoxContainer/DifficultyContainer/MarginContainer/VBoxContainer"]
margin_top = 321.0
margin_right = 592.0
margin_bottom = 441.0
rect_min_size = Vector2( 0, 120 )

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/DifficultyContainer/MarginContainer/VBoxContainer/MediumContainer"]
margin_right = 592.0
margin_bottom = 86.0
custom_constants/separation = 20

[node name="DifficultyButton" parent="HBoxContainer/DifficultyContainer/MarginContainer/VBoxContainer/MediumContainer/HBoxContainer" instance=ExtResource( 6 )]
margin_top = 10.0
margin_right = 66.0
margin_bottom = 76.0
focus_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
group = SubResource( 7 )
difficulty_color = Color( 0.898039, 0.611765, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/DifficultyContainer/MarginContainer/VBoxContainer/MediumContainer/HBoxContainer"]
margin_left = 86.0
margin_right = 566.0
margin_bottom = 86.0

[node name="Title" type="Label" parent="HBoxContainer/DifficultyContainer/MarginContainer/VBoxContainer/MediumContainer/HBoxContainer/VBoxContainer"]
margin_right = 480.0
margin_bottom = 51.0
text = "DIF_MEDIUM"

[node name="Description" type="Label" parent="HBoxContainer/DifficultyContainer/MarginContainer/VBoxContainer/MediumContainer/HBoxContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 480.0
margin_bottom = 86.0
rect_min_size = Vector2( 480, 0 )
custom_fonts/font = SubResource( 8 )
text = "DIF_MEDIUM_DESC"

[node name="Spacer3" type="Control" parent="HBoxContainer/DifficultyContainer/MarginContainer/VBoxContainer"]
margin_top = 450.0
margin_right = 592.0
margin_bottom = 462.0
rect_min_size = Vector2( 0, 12 )

[node name="HardContainer" type="VBoxContainer" parent="HBoxContainer/DifficultyContainer/MarginContainer/VBoxContainer"]
margin_top = 471.0
margin_right = 592.0
margin_bottom = 591.0
rect_min_size = Vector2( 0, 120 )

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/DifficultyContainer/MarginContainer/VBoxContainer/HardContainer"]
margin_right = 592.0
margin_bottom = 86.0
custom_constants/separation = 20

[node name="DifficultyButton" parent="HBoxContainer/DifficultyContainer/MarginContainer/VBoxContainer/HardContainer/HBoxContainer" instance=ExtResource( 6 )]
margin_top = 10.0
margin_right = 66.0
margin_bottom = 76.0
focus_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
group = SubResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/DifficultyContainer/MarginContainer/VBoxContainer/HardContainer/HBoxContainer"]
margin_left = 86.0
margin_right = 566.0
margin_bottom = 86.0

[node name="Title" type="Label" parent="HBoxContainer/DifficultyContainer/MarginContainer/VBoxContainer/HardContainer/HBoxContainer/VBoxContainer"]
margin_right = 480.0
margin_bottom = 51.0
text = "DIF_HARD"

[node name="Description" type="Label" parent="HBoxContainer/DifficultyContainer/MarginContainer/VBoxContainer/HardContainer/HBoxContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 480.0
margin_bottom = 86.0
rect_min_size = Vector2( 480, 0 )
custom_fonts/font = SubResource( 8 )
text = "DIF_HARD_DESC"

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -195.5
margin_top = -210.0
margin_right = 195.5
margin_bottom = -90.0
rect_min_size = Vector2( 0, 120 )
text = "BEGIN_JOURNEY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -949.0
margin_top = -1066.0
margin_right = -691.0
margin_bottom = -946.0
rect_min_size = Vector2( 0, 120 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="StartButton" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="mouse_entered" from="BackButton" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
